# Box-World

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: build.yml  release-native.yml
assets/shaders/: chunk_frag.wgsl  chunk_vertex.wgsl
assets/textures/: generate.bat  terrain_texture.ktx2  textures.txt
assets/textures/split/results/: bedrock.KTX2
box_world/: .gitignore  Cargo.toml
box_world/assets/data/blocks/: bedrock.voxel.ron  grass.voxel.ron  snow.voxel.ron  stone.voxel.ron
box_world/assets/shaders/: chunk_frag.wgsl  chunk_vertex.wgsl
box_world/src/: lib.rs  main.rs  states.rs
box_world/src/chunk/: data.rs  database.rs  lighting.rs  loaded.rs  mod.rs  position.rs  storage.rs
box_world/src/environment/: day_night_cycle.rs  mod.rs
box_world/src/lighting/: mod.rs  sun_added.rs  torch_added.rs  torch_removed.rs
box_world/src/mesher/: chunk_boundary.rs  face.rs  generate.rs  mod.rs  quads.rs  render.rs  visibility.rs
box_world/src/player/: bundle.rs  camera.rs  collision.rs  highlight.rs  input.rs  mod.rs  movement.rs
box_world/src/voxel/: data.rs  mod.rs  position.rs  registry.rs
box_world/src/world_generator/: mod.rs
box_world_data/: Cargo.toml
box_world_data/assets/data/blocks/: air.ron  bedrock.ron  dirt.ron  dirt.voxel.ron  glass.ron  grass.ron  snow.ron  stone.ron  torch.ron
box_world_data/assets/textures/: textures.txt
box_world_data/src/: main.rs
src/: chunk.rs  lib.rs  main.rs  mesher.rs  states.rs  voxel.rs  world.rs
src/chunk/: data.rs  database.rs  loaded.rs  mod.rs  position.rs  storage.rs
src/environment/: day_night_cycle.rs
src/mesher/: chunk_boundary.rs  face.rs  generate.rs  mod.rs  quads.rs  render.rs  side.rs  visibility.rs
src/player/: collision.rs  input.rs  mod.rs
src/voxel/: data.rs  mod.rs  position.rs
src/world/: mod.rs
src/world/generator/: mod.rs
src/world_generator/: mod.rs
