[package]
name = "box_world"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
lto = true

[features]
default = [
  "bevy/multi-threaded",
  "bevy/bevy_winit",
  "bevy/bevy_render",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_pbr",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/bevy_asset",
  "bevy/png",
  "bevy/ktx2",
  "bevy/x11",
  "bevy/wayland",
  "bevy/file_watcher",
  "bevy/tonemapping_luts",
  "bevy_kira_audio/wav",
  "bevy_rapier3d/dim3",
  "bevy_rapier3d/async-collider",
  "bevy_rapier3d/debug-render-3d",
  "bevy_rapier3d/parallel",
  "bevy_common_assets/ron",
  "bitvec/serde",
  "rusqlite/bundled",
]

[dependencies]
winit = "0.28"
image = "0.24.6"
bevy = { version = "0.12", default-features = false }
bevy_kira_audio = { version = "0.20", default-features = false }
bevy-inspector-egui = "0.22"
bevy_rapier3d = { version = "0.24.0", default-features = false }
bevy_atmosphere = "0.8"
bevy_common_assets = "0.9.0"
bevy_asset_loader = "0.19"
futures-lite = "*"
bitvec = "1.0.1"
noise = { git = "https://github.com/Razaekel/noise-rs.git" }
rand = "0.8.5"
ndshape = "0.3.0"
itertools = "0.12"
rusqlite = "0.30"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
serde = "1.0.163"
serde_with = "3.0.0"
bincode = "1.3.3"
zstd = "0.13"
